<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <RadioGroup
        android:id="@+id/sortingModeGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/sort_by"
            android:textStyle="bold"
            android:textColor="@color/design_default_color_primary_dark"/>

        <RadioButton
            android:id="@+id/sortByName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/by_name" />

        <RadioButton
            android:id="@+id/sortBySize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/by_size" />

        <RadioButton
            android:id="@+id/sortByTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/by_time" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/foldersFirstSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:checked="true"
            android:text="@string/folders_first" />

        <ToggleButton
            android:id="@+id/reverseOrderSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:checked="false"
            android:textOff="@string/direct_order"
            android:textOn="@string/reverse_order" />

    </RadioGroup>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="6dp"
                android:textSize="20sp"
                android:lineSpacingMultiplier="1.2"
                tools:text="@string/tools_list_output" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>